--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, form, fieldset, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, main, menu, nav, section, summary, time, mark, audio, video { background: transparent; font-size: 100%; vertical-align: baseline; border: 0; outline: 0; margin: 0; padding: 0; }
 
-html { background: #000; font-family: 'Work Sans', Arial, Helvetica, sans-serif; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch; }
+html { background: #fff; font-family: 'Work Sans', Arial, Helvetica, sans-serif; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; height: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch; }
 body { max-width: 100%; margin: 0 auto; padding: 0; }
 
 
@@ -16,50 +16,87 @@ body { max-width: 100%; margin: 0 auto; padding: 0; }
 @-webkit-keyframes fadein { /* Safari and Chrome */ from {opacity:0;} to {opacity:1;}}
 @-o-keyframes fadein { /* Opera */ from {opacity:0;} to {opacity: 1;}}
 .fadeload {
-	-webkit-animation: fadein 1200ms forwards; 
-	-webkit-animation-name: fadein 1200ms forwards; 
-	-webkit-animation-duration: 1200ms forwards; 	
+	-webkit-animation: fadein 1s forwards; 
+	-webkit-animation-name: fadein 1s forwards; 
+	-webkit-animation-duration: 1s forwards; 	
 }
 
+
 /* SLIDE-UP */ 
-@-webkit-keyframes upload { from {-webkit-transform:translate(0px, 40px)} to {-webkit-transform:translate(0px, 0px)}}
-@-moz-keyframes upload { from {-moz-transform:translate(0px, 40px)} to {-moz-transform:translate(0px, 0px)}}
-@-ms-keyframes upload { from {-ms-transform:translate(0px, 40px)} to {-ms-transform:translate(0px, 0px)}}
-@-o-keyframes upload { from {-o-transform:translate(0px, 40px)} to {-o-transform:translate(0px, 0px)}}
-@keyframes upload { from {transform:translate(0px, 40px)} to {transform:translate(0px, 0px)}}
+@-webkit-keyframes upload { from {-webkit-transform:translate(0px, 30px)} to {-webkit-transform:translate(0px, 0px)}}
+@-moz-keyframes upload { from {-moz-transform:translate(0px, 30px)} to {-moz-transform:translate(0px, 0px)}}
+@-ms-keyframes upload { from {-ms-transform:translate(0px, 30px)} to {-ms-transform:translate(0px, 0px)}}
+@-o-keyframes upload { from {-o-transform:translate(0px, 30px)} to {-o-transform:translate(0px, 0px)}}
+@keyframes upload { from {transform:translate(0px, 30px)} to {transform:translate(0px, 0px)}}
 .upload {
+    opacity:0;
+    opacity: 1 \9; /*just in case ie*/
 	-webkit-animation: fadein, upload 500ms; 
 	-webkit-animation-name: fadein, upload 500ms; 
 	-webkit-animation-duration: 500ms;
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+    -webkit-animation-delay: 300ms;
+    -moz-animation-delay:300ms;
+    animation-delay: 300ms;
 }
+
+.upload.one {
+    opacity:0;
+    opacity: 1 \9; /*just in case ie*/
+    -webkit-animation-delay: 500ms;
+    -moz-animation-delay:500ms;
+    animation-delay: 500ms;
+}
+
+.upload.two {
+    opacity:0;
+    opacity: 1 \9; /*just in case ie*/
+    -webkit-animation-delay: 700ms;
+    -moz-animation-delay:700ms;
+    animation-delay: 700ms;
+}
+
+.upload.three {
+    opacity:0;
+    opacity: 1 \9; /*just in case ie*/
+    -webkit-animation-delay: 900ms;
+    -moz-animation-delay:900ms;
+    animation-delay: 900ms;
+}
+
+
 
 /* MEDIA
 ------------------------------------------------------------------------------------------------ */
 
 h1 {
-    font-family: 'Gabriela', serif;
-    font-size: 2.7em;
-    line-height: 1.35em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5em;
+    line-height: 1.25em;
     margin-left: -3px;
     font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 h2 {
-    font-family: 'Work Sans', sans-serif;
-    font-size: .8em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: .7em;
     line-height: 1em;
     margin: 0;
     padding: 10% 0 0 0;
     text-align: center;
     font-weight: 500;
     color: darkgrey;
+    text-transform: uppercase;
 }
 
 h3 {
-    font-family: 'Work Sans', sans-serif;
-    font-size: .85em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: .9em;
     letter-spacing: .005em;
-    text-transform: uppercase;
     margin: 0;
     font-weight: 500;
 }
@@ -129,7 +166,7 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
 }
 .intro {
     position: relative;
-    padding: 22% 0 22% 0;
+    padding: 16% 0 16% 0;
     margin: 0 auto;
     border-left: 0px #e8e8e8 solid;
     color: #1e2023;
@@ -221,22 +258,6 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
 }
 
 @media only screen and (max-width: 500px) {
-    h1 {
-        font-size: 2.25em;
-        line-height: 1.35em;
-        margin-left: -3px;
-    }
-    
-    h2 {
-        font-size: 2.75em;
-        line-height: 1em;
-        margin: 0;
-    }
-    
-    h3 {
-        font-size: 1em;
-        margin: 0;
-    }
     
     .folio-list {
         width: 85%;
