--- a/style2.css
+++ b/style2.css
@@ -73,12 +73,12 @@ body { max-width: 100%; margin: 0 auto; padding: 0; }
 
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 2.5em;
+    font-size: 1.65em;
     line-height: 1.25em;
     margin-left: -3px;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 9px;
 }
 
 h2 {
@@ -86,11 +86,12 @@ h2 {
     font-size: .7em;
     line-height: 1em;
     margin: 0;
-    padding: 10% 0 0 0;
+    padding: 2% 0 0 0;
     text-align: center;
-    font-weight: 500;
-    color: darkgrey;
+    font-weight: 700;
+    color: #1e2023;
     text-transform: uppercase;
+    letter-spacing: 8px;
 }
 
 h3 {
@@ -101,6 +102,16 @@ h3 {
     font-weight: 500;
 }
 
+h4 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .7em;
+    line-height: 1em;
+    margin: 0;
+    padding: 3% 3% 0 0;
+    text-align: right;
+    font-weight: 500;
+    color: darkgrey;
+}
 
 a {
     font-family: 'Work Sans', sans-serif;
@@ -120,29 +131,6 @@ a:hover {
     color: #fff;
 }
 
-.red {
-    color: red;
-}
-
-.blue {
-    color: blue;
-}
-
-.pink {
-    color: deeppink;
-}
-
-.darkred {
-    color: darkred;
-}
-
-.lightblue {
-    color: skyblue;
-}
-
-.darkblue {
-    color: darkblue;
-}
 img { -ms-interpolation-mode: bicubic; }
 img, object, embed { display: block; vertical-align: middle; max-width: 100%; width: auto; width: auto\9; /* IE Fix */ height: auto; border: 0; }
 
@@ -155,43 +143,27 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
     border-bottom: 0px #e8e8e8 solid;
 }
 
-.hero img {
+.footer {
+    position: relative;
     width: 100%;
+    background-color: #000;
+    height: 300px;
+    margin: 0 auto;
+    padding: 10% 0 0 15%;
+    clear: both;
+    color: #fff;
+    text-align: left;
 }
 
-.sixty-five {
-    position: relative;
-    width: 65%;
-    margin: 0 auto;
-}
 .intro {
     position: relative;
-    padding: 16% 0 16% 0;
+    padding: 16% 0 18% 0;
     margin: 0 auto;
     border-left: 0px #e8e8e8 solid;
     color: #1e2023;
     text-align: center;
 }
 
-.white-border {
-    height: 8px;
-    width: 20%;
-    background-color: #fff;
-    margin: 120px 0 15px 0;
-}
-
-.online {
-    width: 100%;
-    background-color: #ffb4bb;
-    padding: 100px 0 100px 0;
-}
-
-.black-border {
-    height: 8px;
-    width: 20%;
-    background-color: #434343;
-    margin: 0px 0 15px 0;
-}
 
 .work {
     position: relative;
@@ -202,37 +174,6 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
     padding: 0 0 0px 0;
 }
 
-.folio-list {
-    color: #fff;
-    width: 100%;
-    min-height: auto;
-    margin: 0 auto;
-    padding: 100px 7.5% 80px 7.5%;
-    background-size: 200% 200%;
-    background-image: linear-gradient(to top, #ffffff 50%, transparent 50%);
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -ms-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;
-}
-
-.folio-list:hover {
-    color: #000;
-    margin: 0 auto; 
-    padding: 100px 7.5% 80px 8.5%;
-    background-image: linear-gradient(to top, #ffffff 51%, transparent 50%);
-    background-position: 0 100%;
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -ms-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;
-}
-
-.item {
-    margin: 50px auto 50px auto;
-}
 
 .left {
     display: inline-block;
@@ -245,16 +186,6 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
     display: inline-block;
     width: 50%;
     height: auto;
-}
-
-.work-pages {
-    position: relative;
-    width: 85%;
-    padding: 0;
-    margin: 4% auto;
-    border-left: 0px #797979 solid;
-    color: #fff;
-    box-shadow: 15px 80px 125px #5f5f5f;
 }
 
 @media only screen and (max-width: 500px) {
