--- a/style2.css
+++ b/style2.css
@@ -225,12 +225,12 @@ img, object, embed { display: block; vertical-align: middle; max-width: 100%; wi
     .footer {
     position: relative;
     width: 100%;
-    background-color: #000;
+    background-color: #fff;
     height: 300px;
     margin: 0 auto;
     padding: 25% 0 0 0%;
     clear: both;
-    color: #fff;
+    color: #000;
     text-align: center;
 }
         h1 {
